
0.03  2013-02-08
  - Added command_error and query_failure methods to Mango::Protocol.
  - Improved tests.
  - Fixed small exception handling bugs in Mango.

0.02  2013-02-07
  - Added batch_size attribute to Mango::Cursor.
  - Added count method to Mango::Cursor.
  - Added next_id method to Mango::Protocol.
  - Added multi and upsert options to update method in Mango::Collection.
  - Added single option to remove method in Mango::Collection.
  - Changed reply format from array to hash.
  - Improved documentation.
  - Improved tests.
  - Fixed a few exception handling bugs.
  - Fixed limit functionality in Mango::Cursor.
  - Fixed a few small timing bugs in Mango::Cursor.

0.01  2013-02-06
  - First release.